[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
# serde = { workspace = true }
# serde_json = { workspace = true }
thiserror = { workspace = true }
# tokio = { workspace = true, features = ["full"] }
tempdir = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
zip-extensions = { workspace = true }

[lints]
workspace = true

[package]
name = "cli"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
